First CSS update
navigation bar, and audio tidy up

--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="../colours/colours.html">Colours</a> |
-            <a href="geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
+            
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="../colours/colours.html">Colours</a> 
+            <a href="geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
             <a href="../contact.html">Contact</a> 
         </nav>
         <div class="large"><i>GEOMETRY</i></div>
@@ -37,5 +39,7 @@
         <a href="arcades.html"class="nav-style">5. arcades</a><br><br><br>
         <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <div class="space-large"></div>
+        <div class="space-large"></div>
+        <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
