--- a/colours/functions.html
+++ b/colours/functions.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="colours.html">Colours</a> |
-            <a href="../Geometry/Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>HARMONIC FUNCTION</I></h1>
@@ -194,5 +195,6 @@
             <a href="secondaries.html"class="nav-style">Back to Secondries</a> |
             <a href="functions 2.html"class="nav-style">Harmonic Functions Part 2</a>
             <div class="space-large"></div>
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
