--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,18 @@
   </head>
   <body>
     <nav>
-        | <a href="index.html">Home</a> |
-        <a href="colours/colours.html">Colours</a> |
-        <a href="Geometry/Geometry.html">Geometry</a> |
-        <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="mystory.html">My Story</a> |
+      <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="index.html">Home</a> 
+        <a href="colours/colours.html">Colours</a> 
+        <a href="Geometry/Geometry.html">Geometry</a> 
+        <a href="cookbook/InAction.html">Cook Book</a> 
+        <a href="mystory.html">My Story</a> 
         <a href="contact.html">Contact</a> 
     </nav>
     <div class="large"><i>LET'S CONNECT</i></div>
     <div class="space-large"></div>
     <a href="https://www.instagram.com/metaharmony_" target="_blank" class="nav-style">Metaharmony Instagram</a>
     <div class="space-large"></div>
+    <img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
