--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <nav>
-        | <a href="index.html">Home</a> |
-        <a href="colours/colours.html">Colours</a> |
-        <a href="geometry/geometry.html">Geometry</a> |
-        <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="mystory.html">My Story</a> |
+      <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+        <a href="index.html">Home</a> 
+        <a href="colours/colours.html">Colours</a> 
+        <a href="geometry/geometry.html">Geometry</a> 
+        <a href="cookbook/InAction.html">Cook Book</a> 
+        <a href="mystory.html">My story</a> 
         <a href="contact.html">Contact</a> 
     </nav>
     <p><i>WELCOME TO</i></p>
@@ -22,7 +23,7 @@
 <div class="space-large"></div>
 <img src="images/cw.png" class="standard-image" alt="Colour Wheel"><br>
 <div class="space-large"></div>
-<a href="colours/colours.html" class="nav-style" ><i>Click here to learn Colours</i></a>
+<a href="colours/colours.html" class="nav-style" >Click here to learn Colours</a>
 <div class="space-large"></div>
 <h2><i>"I think metahamrony really shines for people who</i></h2>
 <h2><i>want to make fresh modern compositional choices"</i></h2>
@@ -41,7 +42,7 @@
 <p><i>Badd11 F^7 Badd11 F^7</i></p>
 <p><i>C^7 F^7 Cmaj</i></p>
 <div class="space-large"></div>
-<a href="cookbook/InAction.html" class="nav-style" ><i>Click here for Cook Book</i></a>
+<a href="cookbook/InAction.html" class="nav-style" >Click here for Cook Book</a>
 <div class="space-large"></div>
 <h1><i>GEOMETRY</i></h1>
 <div class="space-large"></div>
@@ -51,14 +52,16 @@
 <h2><i>"Grasping the geometries of metaharmony</i></h2>
 <h2><i>feels like grasping music in concrete form"</i></h2>
 <div class="space-large"></div>
-<a href="Geometry/Geometry.html" class="nav-style" ><i>Click here to learn Geometry</i></a>
+<a href="Geometry/Geometry.html" class="nav-style" >Click here to learn Geometry</a>
 <div class="space-large"></div>
 <p><i>The first step of metaharmony is learning the colours,</i></p>
 <p><i>But you might want to start with cook book for inspiration</i></p>
 <h3><i>The choice ahead is yours:</i></h3>
 <div class="space-large"></div>
-<a href="colours/colours.html" class="nav-style" ><i>Click here for <b>COLOURS</b></i></a> |
-<a href="colours/colours.html" class="nav-style" ><i>Click here for <b>COOK BOOK</b></i></a>
+<a href="colours/colours.html" class="nav-style" >Learn Colours</a>
+<div class="space-medium"></div>
+<a href="cookbook/InAction.html" class="nav-style" >Explore Cook Book</a>
 <div class="space-large"></div>
+<img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
