--- a/mystory.html
+++ b/mystory.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <nav>
-        | <a href="index.html">Home</a> |
-        <a href="colours/colours.html">Colours</a> |
-        <a href="Geometry/Geometry.html">Geometry</a> |
-        <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="mystory.html">My Story</a> |
-        <a href="contact">Contact</a> 
+      <img src="images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="index.html">Home</a>
+        <a href="colours/colours.html">Colours</a>
+        <a href="Geometry/Geometry.html">Geometry</a>
+        <a href="cookbook/InAction.html">Cook Book</a>
+        <a href="mystory.html">My Story</a>
+        <a href="contact.html">Contact</a> 
     </nav>
     <div class="large"><i>MY STORY</i></div>
     <div class="space-medium"></div>
@@ -135,5 +136,6 @@
     <div class="space-large"></div>
     <a href="index.html" class="nav-style" >Back Home</a>
     <div class="space-large"></div>
+    <img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
