--- a/Geometry/atrium.html
+++ b/Geometry/atrium.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="../colours/colours.html">Colours</a> |
-            <a href="Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="../colours/colours.html">Colours</a> 
+            <a href="Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <p><b><i><u>GEOMETRY:</u></i></b></p>
         <h1><i>ATRIA</i></h1>
@@ -22,5 +23,7 @@
         <div class="space-large"></div>
         <a href="arcades.html"class="nav-style">Back to Arcades</a> |
             <a href="../cookbook/InAction.html"class="nav-style">To the Cook Book!</a>
+            <div class="space-large"></div>
+            <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
