--- a/colours/colours.html
+++ b/colours/colours.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="colours.html">Colours</a> |
-            <a href="../Geometry/Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <div class="large"><i>COLOURS</i></div>
         <div class="space-medium"></div>
@@ -45,5 +46,6 @@
             <div class="space-medium"></div>
             <h2>Advanced colour pages coming soon</h2>
             <div class="space-large"></div>
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
