--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="colours.html">Colours</a> |
-            <a href="../Geometry/Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>COMPLEMENTARY COLOURS</I></h1>
@@ -175,5 +176,6 @@
             <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
             <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
             <div class="space-large"></div>
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
