--- a/colours/functions 2.html
+++ b/colours/functions 2.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="colours.html">Colours</a> |
-            <a href="../Geometry/Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>HARMONIC FUNCTION 2</I></h1>
@@ -134,5 +135,6 @@
             <a href="functions.html"class="nav-style">Back to Functions 1</a> |
             <a href="complimentary.html"class="nav-style">Continue to Complimentary Colours</a>
             <div class="space-large"></div>
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
