--- a/colours/secondaries.html
+++ b/colours/secondaries.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <nav>
-            | <a href="../index.html">Home</a> |
-            <a href="colours.html">Colours</a> |
-            <a href="../Geometry/Geometry.html">Geometry</a> |
-            <a href="../cookbook/InAction.html">Cook Book</a> |
-            <a href="../mystory.html">My Story</a> |
-            <a href="../contact.html">Contact</a> |
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+            <a href="../index.html">Home</a> 
+            <a href="colours.html">Colours</a> 
+            <a href="../Geometry/Geometry.html">Geometry</a> 
+            <a href="../cookbook/InAction.html">Cook Book</a> 
+            <a href="../mystory.html">My Story</a> 
+            <a href="../contact.html">Contact</a> 
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>SECONDARY COLOURS</I></h1>
@@ -80,5 +81,6 @@
         <a href="primaries.html"class="nav-style">Back to Primaries</a>  | 
         <a href="functions.html"class="nav-style">Continue to Harmonic Functions</a>
         <div class="space-large"></div>
+        <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
