--- a/cookbook/Exploringsubdominants/exploringsubdominants.html
+++ b/cookbook/Exploringsubdominants/exploringsubdominants.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <nav>
-        | <a href="../../index.html">Home</a> |
-        <a href="../../colours/colours.html">Colours</a> |
-        <a href="../../Geometry/Geometry.html">Geometry</a> |
-        <a href="../InAction.html">Cook Book</a> |
-        <a href="../../mystory.html">My Story</a> |
+      <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="../../index.html">Home</a> 
+        <a href="../../colours/colours.html">Colours</a> 
+        <a href="../../Geometry/Geometry.html">Geometry</a> 
+        <a href="../InAction.html">Cook Book</a> 
+        <a href="../../mystory.html">My Story</a> 
         <a href="../../contact.html">Contact</a> 
     </nav>
     <p><b><i><u>COOK BOOK:</u></i></b></p>
@@ -144,5 +145,6 @@
 <div class="space-large"></div>
     <a href="../InAction.html"class="nav-style">Back to Cook Book</a><br>
     <div class="space-large"></div>
+    <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
