--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <nav>
-        | <a href="../index.html">Home</a> |
-        <a href="../colours/colours.html">Colours</a> |
-        <a href="../Geometry/Geometry.html">Geometry</a> |
-        <a href="InAction.html">Cook Book</a> |
-        <a href="../mystory.html">My Story</a> |
+      <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
+      <a href="../index.html">Home</a> 
+        <a href="../colours/colours.html">Colours</a> 
+        <a href="../Geometry/Geometry.html">Geometry</a> 
+        <a href="InAction.html">Cook Book</a> 
+        <a href="../mystory.html">My Story</a> 
         <a href="../contact.html">Contact</a> 
     </nav>
     <div class="large"><i>COOK BOOK</i></div>
@@ -28,5 +29,6 @@
     <div class="space-large"></div>
     <h2>More pages coming soon</h2>
     <div class="space-large"></div>
+    <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
