--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <img src="images/logo.png" class="small-image" alt="Colour Wheel">
         <a href="index.html">Home</a> 
         <a href="colours/colours.html">Colours</a> 
-        <a href="geometry/geometry.html">Geometry</a> 
+        <a href="Geometry/Geometry.html">Geometry</a> 
         <a href="cookbook/InAction.html">Cook Book</a> 
         <a href="mystory.html">My story</a> 
         <a href="contact.html">Contact</a> 
