break and summary colour pages

--- a/colours/colours.html
+++ b/colours/colours.html
@@ -40,9 +40,11 @@
         <div class="space-medium"></div>
             <a href="primaries.html"class="nav-style">1. Primary Colours</a><br><br><br>
             <a href="secondaries.html"class="nav-style">2. Secondary Colours</a><br><br><br>
-            <a href="functions.html"class="nav-style">3. Harmonic Functions 1</a> |
+            <a href="rest.html"class="nav-style">BREAK TIME</a><br><br><br>
+            <a href="functions.html"class="nav-style">3. Harmonic Functions 1</a> +
             <a href="functions 2.html"class="nav-style">3. Harmonic Functions 2</a><br><br><br>
             <a href="complimentary.html"class="nav-style">4. Complimentary Colours</a><br><br><br>
+            <a href="coloursummary.html"class="nav-style">SUMMARY</a><br><br><br>
             <div class="space-medium"></div>
             <h2>Advanced colour pages coming soon</h2>
             <div class="space-large"></div>
