--- a/colours/functions.html
+++ b/colours/functions.html
@@ -192,7 +192,7 @@
         <h3>and what if your song is in a completely different key?</h3>
         <p>When you're ready, continue to the next page</p>
         <div class="space-large"></div>
-            <a href="secondaries.html"class="nav-style">Back to Secondries</a> |
+            <a href="rest.html"class="nav-style">Back to Break Time</a> |
             <a href="functions 2.html"class="nav-style">Harmonic Functions Part 2</a>
             <div class="space-large"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
