--- a/colours/secondaries.html
+++ b/colours/secondaries.html
@@ -76,10 +76,10 @@
         <img src="../images/cw.png" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
         <p>You now understand the 6 colours of the metaharmony colour wheel</p>
-        <p>Once you've digested this you're ready to move onto the <b>why</b> of the colours...</p>
+        <p>I think it's time for a break...</p>
         <div class="space-large"></div>
         <a href="primaries.html"class="nav-style">Back to Primaries</a>  | 
-        <a href="functions.html"class="nav-style">Continue to Harmonic Functions</a>
+        <a href="rest.html"class="nav-style">Break Time</a>
         <div class="space-large"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
