--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -158,23 +158,8 @@
         <div class="space-large"></div>
         <p>And all applies the same with purple/yellow and green/red</p>
         <div class="space-large"></div>
-        <h1>Congratulations!</h1>
-        <p>We've completed the 4 first steps of meta harmony</p>
-        <div class="space-large"></div>
-        <p>We know:</p>
-        <p>1. that primary colours represent the 12 notes</p>
-        <p>2. that secondary colours represent the major and minor triads</p>
-        <p>3. that secondary colours explain function in a broad way and allow key changes</p>
-        <p>4. that complimentary colours give tension and resolution</p>
-        <div class="space-large"></div>
-        <p>We've set our foundation</p>
-        <div class="space-large"></div>
-        <h3>Where would you like to go next?</h3>
-        <div class="space-large"></div>
             <a href="functions 2.html"class="nav-style">Back to Functions 2</a> |
-            <a href="/colours/colours.html"class="nav-style">Advanced colour pages</a> | 
-            <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
-            <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
+            <a href="coloursummary.html"class="nav-style">Let's Summarise</a>
             <div class="space-large"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
