--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -15,6 +15,7 @@
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
             <a href="../contact.html">Contact</a> 
+            <div class="divider"></div>
         </nav>
         <div class="large"><i>GEOMETRY</i></div>
         <div class="space-medium"></div>
@@ -40,6 +41,6 @@
         <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <div class="space-large"></div>
         <div class="space-large"></div>
-        <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
+        <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
