--- a/colours/colours.html
+++ b/colours/colours.html
@@ -13,7 +13,8 @@
             <a href="../Geometry/Geometry.html">Geometry</a> 
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
-            <a href="../contact.html">Contact</a> 
+            <a href="../contact.html">Contact</a>
+            <div class="divider"></div>
         </nav>
         <div class="large"><i>COLOURS</i></div>
         <div class="space-medium"></div>
@@ -23,17 +24,18 @@
         <p>Below there's a full page on each of these 4 steps</p>
         <p>But first here's a summary:</p>
         <div class="space-large"></div>
-        <h2>Step 1: Notes = Primary colours</h2>
-        <img src="../images/start.png" class="standard-image" alt="Colour Wheel"><br>
-        <h2>Step 2: Major and minor chords = Secondary colours</h2>
-        <img src="../images/cmajo.png" class="standard-image" alt="Colour Wheel"><br>
-        <h2>Step 3: Secondary colours = Harmonic function</h2>
-        <img src="../images/shareddoms.gif" class="standard-image" alt="Colour Wheel">
-        <h2>Step 4: Complimentary colours (the start of melody and chord extensions)</h2>
-        <img src="../images/cmaj7.gif" class="standard-image" alt="Colour Wheel">
+        <h2>Step 1: Primary colours</h2>
+        <p><i>Notes related by minor 3rds</i></p>
+        <img src="../images/justprimaries.png" class="standard-image" alt="Colour Wheel"><br>
+        <h2>Step 2: Secondary colours</h2>
+        <p><i>Major and minor chords related by minor 3rds</i></p>
+        <img src="../images/justorange.png" class="standard-image" alt="Colour Wheel"><br>
+        <h2>Step 3: Harmonic function</h2>
+        <p><i>Using any chord in a key and changing keys</i></p>
+        <img src="../images/purpsandgreens.png" class="standard-image" alt="Colour Wheel">
+        <h2>Step 4: Complimentary colours</h2>
+        <p><i>Tension and resolution, melody and chord extensions</i></p>
         <img src="../images/cmp.png" class="standard-image" alt="Colour Wheel"><br>
-        <div class="space-large"></div>
-        <img src="../images/storypics.png" class="standard-image" alt="Colour Wheel"><br>
         <div class="space-large"></div>
         <h3>Work through these pages for detail on each step (Step 3 is in two halves)</h3>
         <p><i>Don't expect to digest all this information in one sitting</i></p>
