--- a/colours/functions.html
+++ b/colours/functions.html
@@ -13,7 +13,8 @@
             <a href="../Geometry/Geometry.html">Geometry</a> 
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
-            <a href="../contact.html">Contact</a> 
+            <a href="../contact.html">Contact</a>
+            <div class="divider"></div> 
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>HARMONIC FUNCTION</I></h1>
