--- a/mystory.html
+++ b/mystory.html
@@ -14,6 +14,7 @@
         <a href="cookbook/InAction.html">Cook Book</a>
         <a href="mystory.html">My Story</a>
         <a href="contact.html">Contact</a> 
+        <div class="divider"></div>
     </nav>
     <div class="large"><i>MY STORY</i></div>
     <div class="space-medium"></div>
