--- a/Geometry/atrium.html
+++ b/Geometry/atrium.html
@@ -14,6 +14,7 @@
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
             <a href="../contact.html">Contact</a> 
+            <div class="divider"></div>
         </nav>
         <p><b><i><u>GEOMETRY:</u></i></b></p>
         <h1><i>ATRIA</i></h1>
@@ -24,6 +25,6 @@
         <a href="arcades.html"class="nav-style">Back to Arcades</a> |
             <a href="../cookbook/InAction.html"class="nav-style">To the Cook Book!</a>
             <div class="space-large"></div>
-            <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
+            <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
