--- a/colours/coloursummary.html
+++ b/colours/coloursummary.html
@@ -14,6 +14,7 @@
             <a href="../cookbook/InAction.html">Cook Book</a> 
             <a href="../mystory.html">My Story</a> 
             <a href="../contact.html">Contact</a> 
+            <div class="divider"></div>
         </nav>
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>SUMMARY</I></h1>
