--- a/cookbook/Exploringdominants/Exploringdominants.html
+++ b/cookbook/Exploringdominants/Exploringdominants.html
@@ -14,6 +14,7 @@
         <a href="../InAction.html">Cook Book</a> 
         <a href="../../mystory.html">My Story</a> 
         <a href="../../contact.html">Contact</a> 
+        <div class="divider"></div>
     </nav>
     <p><b><i><u>COOK BOOK:</u></i></b></p>
     <h1><i>EXPLORING THE DOMINANTS</i></h1>
