--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="cookbook/InAction.html">Cook Book</a> 
         <a href="mystory.html">My story</a> 
         <a href="contact.html">Contact</a> 
+        <div class="divider"></div>
     </nav>
     <p><i>WELCOME TO</i></p>
     <div class="super-large"><i>METAHARMONY</i></div>
