adding a few bits
hypercube key changes begin

--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -40,7 +40,8 @@
         <a href="arcades.html"class="nav-style">5. arcades</a><br><br><br>
         <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <div class="space-large"></div>
-        <div class="space-large"></div>
+        <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
