--- a/Geometry/arcades.html
+++ b/Geometry/arcades.html
@@ -25,6 +25,8 @@
             <a href="metaprism.html"class="nav-style">Back to Metaprism</a> |
             <a href="atrium.html"class="nav-style">Continue to Atria</a>
         <div class="space-large"></div>
+        <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
