--- a/Geometry/metaprism.html
+++ b/Geometry/metaprism.html
@@ -25,6 +25,8 @@
             <a href="Hypercubes.html"class="nav-style">Back to Hypercubes</a> |
             <a href="arcades.html"class="nav-style">Continue to Arcades</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
