--- a/Geometry/squares.html
+++ b/Geometry/squares.html
@@ -25,6 +25,8 @@
             <a href="Geometry.html"class="nav-style">Back to Geometry</a> |
             <a href="Alphacubes.html"class="nav-style">Continue to Alpha Cubes</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
