--- a/colours/coloursummary.html
+++ b/colours/coloursummary.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
-        <title>Secondary Colours</title>
+        <title>Colour Summary</title>
         <link rel="icon" href="../images/favicon32.png" type="image/x-icon">
     </head>
     <body>
@@ -24,23 +24,23 @@
         <p>We've completed the 4 first steps of meta harmony</p>
         <p>You've earned:</p>
         <div class="space-medium"></div>
-        <p><img src="../images/logo.png" class="xsmall-image" alt="lg"> <i><b>COLOUR WHEEL ESSENTIALS</b></i> <img src="../images/logo.png" class="xsmall-image" alt="lg"></p>
-        <div class="space-large"></div>
-        <p>We know:</p>
-        <p>1. that primary colours represent the 12 notes, related by minor 3rds</p>
-        <p>2. that secondary colours represent the major and minor triads, related by minor 3rds</p>
-        <p>3. that secondary colours explain function in a broad way and allow key changes</p>
-        <p>4. that complimentary colours give tension and resolution in melody and chord extensions</p>
+        <h2><img src="../images/logo.png" class="xsmall-image" alt="lg"> <i><b>COLOUR WHEEL ESSENTIALS</b></i> <img src="../images/logo.png" class="xsmall-image" alt="lg"></h2>
+        <div class="space-medium"></div>
+        <p><i><b>You know what the colour wheel does:</b></i></h1>
+        <p><i>- Secondary colours explain function in a broad way and allow key changes</i></p>
+        <p><i>- Complimentary colours give tension and resolution in melody and chord extensions</i></p>
         <div class="space-large"></div>
         <p>We've set our foundation</p>
         <div class="space-large"></div>
         <h3>Where would you like to go next?</h3>
         <div class="space-large"></div>
             <a href="complimentary.html"class="nav-style">Back to Complementary</a> |
-            <a href="/colours/colours.html"class="nav-style">Advanced colour pages</a> | 
+            <a href="colours.html"class="nav-style">Advanced colour pages</a> | 
             <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
             <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
