--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
-        <title>Complimentary Colours</title>
+        <title>Complementary Colours</title>
         <link rel="icon" href="../images/favicon32.png" type="image/x-icon">
     </head>
     <body>
@@ -19,11 +19,11 @@
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>COMPLEMENTARY COLOURS</I></h1>
         <div class="space-medium"></div>
-        <p>Welcome to complimentary colours, the beginning of our journey with melody and chord extensions</p>
+        <p>Welcome to complementary colours, the beginning of our journey with melody and chord extensions</p>
         <h3>It's all about tension and resolution</h3>
         <p>Learning outcome: <i>Blue resolves to orange (also red to green and yellow to purple)</i></p>
         <div class="space-large"></div>
-        <p>The phrase 'complimentary colours' comes from the art world and refers to colours that are opporsite on the wheel</p>
+        <p>The phrase 'complementary colours' comes from the art world and refers to colours that are opporsite on the wheel</p>
         <img src="../images/cmp.png" class="standard-image" alt="Colour Wheel"><br>
         <p>They have the highest visual contrast to each other</p>
         <p>Imagine a green jumper with a red design on it, the red will really pop out!</p>
@@ -105,12 +105,12 @@
         <p>In this example, we start on Dº7, resolve down to C6, then we go down to Bº7, resolving back up to C6</p>
         <p>This demonstrates how the blue chord can sit above or below C major resolveing to it</p>
         <div class="space-large"></div>
-        <h2>Complimentary colours is all about the tension of blue pulling back to orange</h2>
+        <h2>Complementary colours is all about the tension of blue pulling back to orange</h2>
         <p>I would encourage you to take a break here and process what we've discussed</p>
         <p>We've covered complementary colours as melodic movement and chord movement</p>
         <p>Here's the 3rd point for this page:</p>
         <div class="space-large"></div>
-        <h3>We can also use complimentary colours to understand chord extensions</h3>
+        <h3>We can also use complementary colours to understand chord extensions</h3>
         <p>for example we think of the C major 7 (C^7) as a resolved orange triad with a tense blue note</p>
         <img src="../images/cmaj7.gif" class="standard-image" alt="Colour Wheel"><br>
         <p>can you hear how the ^7th rubs against the chord?</p>
@@ -125,7 +125,7 @@
         <p>In metaharmony we would write this chord like this:</p>
         <img src="../images/Cmaj7symb.png" class="small-image" alt="Colour Wheel"><br>
         <p>An orange C major triad with a blue ^7th added to it</p>
-        <h2>The complimentary colour gives us 4 chord extensions</h2>
+        <h2>The complementary colour gives us 4 chord extensions</h2>
         <h3>- The ^7th</h3>
         <h3>- The 9th</h3>
         <h3>- The 11th</h3>
@@ -149,7 +149,7 @@
         <p>We'll discuss such things in the advanced colour section of the website</p>
         <div class="space-large"></div>
         <h2>But for now we've learned that</h2>
-        <p>complimentary colours provide:</p>
+        <p>complementary colours provide:</p>
         <h3>- Melodic tension and resolution (Barry's scale)</h3>
         <h3>- Harmonic (chordal) tension and resolution (Dº7 to Cmaj)</h3>
         <h3>- And tense chord extensions (C^7)</h3>
@@ -162,6 +162,8 @@
             <a href="functions 2.html"class="nav-style">Back to Functions 2</a> |
             <a href="coloursummary.html"class="nav-style">Let's Summarise</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
