--- a/colours/functions 2.html
+++ b/colours/functions 2.html
@@ -69,24 +69,26 @@
         <p>- The tritone sub of Gb major</p>
         <p>- The dominant of the minor of Eb major</p>
         <div class="space-large"></div>
-        <h1>Just this alone gives us access to a huge world of key change possibilities</h1>
-        <p>Let's start in the key of C, do a backdoor 251 but resolve the Bb as a tritone sub into the key of A major</p>
-        <img src="../images/CtoA.png" class="standard-image" alt="Colour Wheel">
-        <div class="audio-player-container">
-            <div class="audio-title">C^7 Fm9 Bb7 A^9</div>
-            <audio controls>
-                <source src="../audio/cfmbba.mp3" type="audio/mpeg">
-            </audio>
-        </div>
-        <p>How cool is that?</p>
-        <div class="space-large"></div>
         <p>This harmonic sharing is also applied to the subdominants</p>
         <div class="space-large"></div>
         <h2>This results in an interconnected network of orange keys</h2>
         <p>A landscape of keys that share their harmony through colour</p>
+        <p>For example, F minor is the minor iv of C, but also the regular ii of Eb</p>
+        <img src="../images/CFmEb.png" class="standard-image" alt="Colour Wheel">
+        <div class="audio-player-container">
+            <div class="audio-title">C^7 Fm9 Eb69</div>
+            <audio controls>
+                <source src="../audio/CFmEb.mp3" type="audio/mpeg">
+            </audio>
+        </div>
         <div class="space-large"></div>
-        <p>I'm interested in navigating through this landscape in a sensitive and musical way</p>
-        <p>Which is the goal of the Cook Book</p>
+        <p>We can hear the first chord as tonic, then Fm9 is the minor iv</p>
+        <p>which we resolve as ii into Eb major, we've changed key in the hypercube</p>
+        <p>How would this sound into the other orange keys?</p>
+        <p>Check out the Cook Book page on this:</p>
+        <div class="space-medium"></div>
+        <a href="../cookbook/hypercubekeychanges/hckcminor4.html"class="nav-style">Minor iv round the Hypercube</a>
+        <p>(coming soon)</p>
         <div class="space-large"></div>
         <h1>So,</h1>
         <p>in the orange hypercube:</p>
@@ -131,11 +133,13 @@
         <h1>Ok,</h1>
         <p>We've understood harmonic function on the colour wheel</p>
         <p>What about chord extensions and melodic movement?</p>
-        <p>We're ready for complimentary colours</p>
+        <p>We're ready for complementary colours</p>
         <div class="space-large"></div>
             <a href="functions.html"class="nav-style">Back to Functions 1</a> |
-            <a href="complimentary.html"class="nav-style">Continue to Complimentary Colours</a>
+            <a href="complimentary.html"class="nav-style">Continue to Complementary Colours</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
