--- a/colours/primaries.html
+++ b/colours/primaries.html
@@ -51,7 +51,7 @@
             <p>Here's the tab of what we just played on guitar</p>
             <img src="../images/dimsgtr.gif" class="small-image" alt="Colour Wheel"><br>
             <div class="space-large"></div>
-            <p>I think it's really helpful to visualise this on the circle of 5ths (try to focus on one gif at a time...)</p>
+            <p>I think it's really helpful to visualise this on the circle of 5ths</p>
             <img src="../images/cofths.gif" class="standard-image" alt="Colour Wheel"><br>
             <p>You can see the symmetrical square nature of the 4 notes of each colour</p>
             <p>(This comes into play when we build the geometries)</p>
@@ -62,6 +62,8 @@
             <a href="colours.html"class="nav-style">Back to Colour Home</a> |
             <a href="secondaries.html"class="nav-style">Continue to Secondary Colours</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
