--- a/colours/rest.html
+++ b/colours/rest.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="../styles.css">
-        <title>Secondary Colours</title>
+        <title>Break Time</title>
         <link rel="icon" href="../images/favicon32.png" type="image/x-icon">
     </head>
     <body>
@@ -24,9 +24,13 @@
         <p>You have completed the first two steps of the colour journey</p>
         <p>You've earned your first metaharmony badge:</p>
         <br>
-        <p><img src="../images/logo.png" class="xsmall-image" alt="lg"> <i><b>you know what the colour wheel is</b></i> <img src="../images/logo.png" class="xsmall-image" alt="lg"></p>
+        <h2><img src="../images/logo.png" class="xsmall-image" alt="lg"><b> COLOUR WHEEL FOUNDATIONS</b> <img src="../images/logo.png" class="xsmall-image" alt="lg"></h2>
         <div class="space-medium"></div>
-        <p>This is great time to take a break, rest and digest what we've learned</p>
+        <p><i><b>You know what the colour wheel is:</b></i></h1>
+        <p><i>- Primary colours = notes related by minor 3rds</i></p>
+        <p><i>- Secondary colours = maj/min chords related by minor 3rds</i></p>
+        <div class="space-large"></div>
+        <h1>This is great time to take a break, rest and digest what we've learned</h1>
         <div class="space-large"></div>
         <p>The next question is "what do the colours do?"</p>
         <p>When you're ready, continue to harmonic functions:</p>
@@ -34,6 +38,8 @@
         <a href="secondaries.html"class="nav-style">Back to Secondaries</a>  | 
         <a href="functions.html"class="nav-style">Continue to Harmonic Functions</a>
         <div class="space-large"></div>
+        <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
