--- a/colours/secondaries.html
+++ b/colours/secondaries.html
@@ -69,19 +69,19 @@
         <p>We'll understand why in the next section</p>
         <p>But as for this section,</p>
         <p>Do you feel comfortable that major and minor chords related by minor 3rds have the same colour?</p>
-        <h1>Then Congratulations!</h1>
-        <div class="space-medium"></div>
-        <p>You've completed level one of metaharmony:</p>
-        <p><i>"Primary and secondary colours represent notes and chords related by minor 3rds"</i></p>
+        <h2>That's what we're to think when we look at the colour wheel</h2>
         <div class="space-medium"></div>
         <img src="../images/cw.png" class="standard-image" alt="Colour Wheel">
-        <div class="space-large"></div>
-        <p>You now understand the 6 colours of the metaharmony colour wheel</p>
+        <div class="space-medium"></div>
+        <p>Each of the 6 colours represents either notes or chords related by minor 3rds</p>
+        <div class="space-medium"></div>
         <p>I think it's time for a break...</p>
         <div class="space-large"></div>
         <a href="primaries.html"class="nav-style">Back to Primaries</a>  | 
         <a href="rest.html"class="nav-style">Break Time</a>
         <div class="space-large"></div>
+        <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
