--- a/cookbook/Exploringdominants/Exploringdominants.html
+++ b/cookbook/Exploringdominants/Exploringdominants.html
@@ -221,5 +221,7 @@
     <a href="../Exploringsubdominants/exploringsubdominants.html"class="nav-style">Explore Subdominants</a><br>
   </body>
   <div class="space-large"></div>
+  <div class="divider"></div>
+        <div class="space-small"></div>
   <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
 </html>
