--- a/cookbook/Exploringsubdominants/exploringsubdominants.html
+++ b/cookbook/Exploringsubdominants/exploringsubdominants.html
@@ -146,6 +146,8 @@
 <div class="space-large"></div>
     <a href="../InAction.html"class="nav-style">Back to Cook Book</a><br>
     <div class="space-large"></div>
+    <div class="divider"></div>
+        <div class="space-small"></div>
     <img src="../../images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
