--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="colours/colours.html">Colours</a> 
         <a href="Geometry/Geometry.html">Geometry</a> 
         <a href="cookbook/InAction.html">Cook Book</a> 
-        <a href="mystory.html">My story</a> 
+        <a href="mystory.html">My Story</a> 
         <a href="contact.html">Contact</a> 
         <div class="divider"></div>
     </nav>
@@ -63,6 +63,8 @@
 <div class="space-medium"></div>
 <a href="cookbook/InAction.html" class="nav-style" >Explore Cook Book</a>
 <div class="space-large"></div>
+<div class="divider"></div>
+        <div class="space-small"></div>
 <img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
