--- a/mystory.html
+++ b/mystory.html
@@ -137,6 +137,8 @@
     <div class="space-large"></div>
     <a href="index.html" class="nav-style" >Back Home</a>
     <div class="space-large"></div>
+    <div class="divider"></div>
+        <div class="space-small"></div>
     <img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
