--- a/Geometry/Alphacubes.html
+++ b/Geometry/Alphacubes.html
@@ -25,6 +25,8 @@
             <a href="squares.html"class="nav-style">Back to Squares</a> |
             <a href="Hypercubes.html"class="nav-style">Continue to Hypercubes</a>
         <div class="space-large"></div>
+        <div class="divider"></div>
+        <div class="space-small"></div>
         <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
