--- a/Geometry/atrium.html
+++ b/Geometry/atrium.html
@@ -25,6 +25,8 @@
         <a href="arcades.html"class="nav-style">Back to Arcades</a> |
             <a href="../cookbook/InAction.html"class="nav-style">To the Cook Book!</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
