--- a/colours/colours.html
+++ b/colours/colours.html
@@ -18,6 +18,8 @@
         </nav>
         <div class="large"><i>COLOURS</i></div>
         <div class="space-medium"></div>
+        <img src="../images/cw.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-medium"></div>
         <p>There are 4 initial steps to learning the colour wheel:</p>
         <div class="space-medium"></div>
         <img src="../images/story.png" class="standard-image" alt="Colour Wheel"><br>
@@ -33,7 +35,7 @@
         <h2>Step 3: Harmonic function</h2>
         <p><i>Using any chord in a key and changing keys</i></p>
         <img src="../images/purpsandgreens.png" class="standard-image" alt="Colour Wheel">
-        <h2>Step 4: Complimentary colours</h2>
+        <h2>Step 4: Complementary colours</h2>
         <p><i>Tension and resolution, melody and chord extensions</i></p>
         <img src="../images/cmp.png" class="standard-image" alt="Colour Wheel"><br>
         <div class="space-large"></div>
@@ -45,11 +47,13 @@
             <a href="rest.html"class="nav-style">BREAK TIME</a><br><br><br>
             <a href="functions.html"class="nav-style">3. Harmonic Functions 1</a> +
             <a href="functions 2.html"class="nav-style">3. Harmonic Functions 2</a><br><br><br>
-            <a href="complimentary.html"class="nav-style">4. Complimentary Colours</a><br><br><br>
+            <a href="complimentary.html"class="nav-style">4. Complementary Colours</a><br><br><br>
             <a href="coloursummary.html"class="nav-style">SUMMARY</a><br><br><br>
             <div class="space-medium"></div>
             <h2>Advanced colour pages coming soon</h2>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
