--- a/colours/functions.html
+++ b/colours/functions.html
@@ -196,6 +196,8 @@
             <a href="rest.html"class="nav-style">Back to Break Time</a> |
             <a href="functions 2.html"class="nav-style">Harmonic Functions Part 2</a>
             <div class="space-large"></div>
+            <div class="divider"></div>
+        <div class="space-small"></div>
             <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
         </body>
  </html>
