--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
     <div class="space-large"></div>
     <a href="https://www.instagram.com/metaharmony_" target="_blank" class="nav-style">Metaharmony Instagram</a>
     <div class="space-large"></div>
+    <div class="divider"></div>
+        <div class="space-small"></div>
     <img src="images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
