--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -22,14 +22,17 @@
     <p>The metaharmony cook book is a place to get fresh compositional ideas for your music</p>
     <p><i>My intention is to present a palette of rough ideas to inspire you</i></p>
     <div class="space-large"></div>
-    <h3><i>Start with either of these:</i></h3>
+    <h3><i>Start with any of these:</i></h3>
     <div class="space-medium"></div>
     <a href="Exploringdominants/Exploringdominants.html"class="nav-style">Exploring the Dominants</a>
     <div class="space-medium"></div>
-    <a href="Exploringsubdominants/exploringsubdominants.html"class="nav-style">Exploring the Subdominants</a><br><br><br>
-    <div class="space-large"></div>
+    <a href="Exploringsubdominants/exploringsubdominants.html"class="nav-style">Exploring the Subdominants</a>
+    <div class="space-medium"></div>
+    <a href="hypercubekeychanges/hypercubekeychanges.html"class="nav-style">Hypercube Key Changes</a>
+    <div class="space-medium"></div>
     <h2>More pages coming soon</h2>
-    <div class="space-large"></div>
+    <div class="space-large"></div><div class="divider"></div>
+    <div class="space-small"></div>
     <img src="../images/logo.png" class="small-image" alt="Colour Wheel">
   </body>
 </html>
