--- a/colours/functions 2.html
+++ b/colours/functions 2.html
@@ -87,8 +87,7 @@
         <p>How would this sound into the other orange keys?</p>
         <p>Check out the Cook Book page on this:</p>
         <div class="space-medium"></div>
-        <a href="../cookbook/hypercubekeychanges/hckcminor4.html"class="nav-style">Minor iv round the Hypercube</a>
-        <p>(coming soon)</p>
+        <a href="../cookbook/hypercubekeychanges/hckcminor4.html"class="nav-style">Minor 4 round the Hypercube</a>
         <div class="space-large"></div>
         <h1>So,</h1>
         <p>in the orange hypercube:</p>
@@ -107,7 +106,7 @@
         <p>but this means we can do all the beautful key weaving we did in the orange hypercube</p>
         <p>but also for green keys and purple keys</p>
         <img src="../images/ingreen.png" class="standard-image" alt="Colour Wheel">
-        <p>Above is the progression we did in C major (previous audio clip) but in the green hypercube in the key of D</p>
+        <p>Above is the progression we did in C major (previous audio clip) but in the green hypercube starting in the key of D</p>
         <div class="space-large"></div>
         <p>Now we can play in any key by using the 3 hypercubes</p>
         <p><i>"Which of the 12 keys are we in?</i></p>
@@ -115,9 +114,11 @@
         <img src="../images/hypercubeboxes.png" class="standard-image" alt="Colour Wheel">
         <p>Think of it like 3 containers, each holding 4 keys</p>
         <div class="space-large"></div>
-        <p>We can also change between keys of the same colour by staying in one hypercube (as above)</p>
+        <p>We can change between keys of the same colour by staying in one hypercube (as above)</p>
         <p><i>"Let's change from the key of E to the key of Bb</i></p>
         <p><i>We'll be moving in the purple hypercube"</i></p>
+        <div class="space-medium"></div>
+        <p>There's endless ways to modulate through a hypercube (Cook Book)</p>
         <div class="space-large"></div>
         <h2>But one question remains:</h2>
         <p>How do we modulate from one hypercube to another?</p>
