--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -22,13 +22,19 @@
     <p>The metaharmony cook book is a place to get fresh compositional ideas for your music</p>
     <p><i>My intention is to present a palette of rough ideas to inspire you</i></p>
     <div class="space-large"></div>
-    <h3><i>Start with any of these:</i></h3>
+    <h3><i>Ideas that stay in one key:</i></h3>
     <div class="space-medium"></div>
     <a href="Exploringdominants/Exploringdominants.html"class="nav-style">Exploring the Dominants</a>
     <div class="space-medium"></div>
     <a href="Exploringsubdominants/exploringsubdominants.html"class="nav-style">Exploring the Subdominants</a>
     <div class="space-medium"></div>
-    <a href="hypercubekeychanges/hypercubekeychanges.html"class="nav-style">Hypercube Key Changes</a>
+    <h3><i>Ideas that modulate around the Hypercube:</i></h3>
+    <div class="space-medium"></div>
+    <a href="hypercubekeychanges/hckcminor4.html"class="nav-style">Minor 4 around the Hypercube</a>
+    <div class="space-medium"></div>
+    <h3><i>Ideas that modulate around the Metaprism:</i></h3>
+    <div class="space-medium"></div>
+    <a href="metaprismkeychanges/iitoiii.html"class="nav-style">ii / iii</a>
     <div class="space-medium"></div>
     <h2>More pages coming soon</h2>
     <div class="space-large"></div><div class="divider"></div>
