--- a/cookbook/hypercubekeychanges/hckcminor4.html
+++ b/cookbook/hypercubekeychanges/hckcminor4.html
@@ -20,7 +20,51 @@
     <h1><i>MINOR IV ROUND THE HYPERCUBE</i></h1>
     <div class="space-medium"></div>
     <p>Let's use the minor 4 to modulate around the hypercube</p>
-    <p>Coming soon</p>
+<div class="space-large"></div>
+<p>We've already heard C Fm to Eb in the second Harmonic Functions page</p>
+<div class="space-medium"></div>
+<a href="../../colours/functions 2.html"class="nav-style">Harmonic Functions 2</a>
+<div class="space-medium"></div>
+<img src="../../images/CFmEb.png" class="standard-image" alt="Colour Wheel">
+<div class="audio-player-container">
+    <div class="audio-title">C^7 Fm9 Eb69</div>
+    <audio controls>
+        <source src="../../audio/CFmEb.mp3" type="audio/mpeg">
+    </audio>
+</div>
+<div class="space-large"></div>
+<h2>Next up is to go to Gb (or F#)</h2>
+<div class="space-medium"></div>
+<img src="../../imagesCB/cfmfsharp.png" class="standard-image" alt="Colour Wheel">
+<div class="audio-player-container">
+    <div class="audio-title">C^7 Fm7 Gb69</div>
+    <audio controls>
+        <source src="../../audioCB/cfmfsharp.mp3" type="audio/mpeg">
+    </audio>
+</div>
+<div class="space-medium"></div>
+<p>This goes 1 to the minor 4 in C major, but the F minor resolves into Gb major,</p>
+<p>then we go to chord 4 in Gb major (Cb#11)</p>
+<p>Then resolve to the tonic Gb major</p>
+<div class="space-medium"></div>
+<p><i>C^7 Fm7 Gb69 Cb#11 Gbmajor</i></p>
+<div class="space-large"></div>
+<h2>Next up is to go to A</h2>
+<div class="space-medium"></div>
+<img src="../../imagesCB/cfma.png" class="standard-image" alt="Colour Wheel">
+<div class="audio-player-container">
+    <div class="audio-title">C^7 Fm7 A^7</div>
+    <audio controls>
+        <source src="../../audioCB/cfma.mp3" type="audio/mpeg">
+    </audio>
+</div>
+<div class="space-medium"></div>
+<p>Again we have 1 to the minor 4 in C major, with the F minor resolving into A major,</p>
+<p>then we go to chord 4 in A (D^7)</p>
+<p>we then enjoy another 1 to 4 in A major</p>
+<p>Then resolve to the tonic A major</p>
+<div class="space-medium"></div>
+<p><i>C^7 Fm7 A^7 D^7 A^7 D^7 Amajor</i></p>
 <div class="space-large"></div>
     <a href="../InAction.html"class="nav-style">Back to Cook Book</a><br>
     <div class="space-large"></div>
